
   o Rômulo aka. Midilab started to implement a footswitch function which
     is especially useful for live recording and track modifications while
     playing on a keyboard.
     Press&Hold the footswitch to enable record mode, release it to disable
     record mode.
     Tap the footswitch shortly to delete the track.
     The footswitch can be assigned to a free DIN pin in MBSEQ_HW.V4

   o fixed potential buffer overrun when preset is stored



MIDIboxSEQ V4.053
~~~~~~~~~~~~~~~~~

   o bugfix: MIDI IN ports are working again on MBHP_CORE_STM32 build


MIDIboxSEQ V4.052
~~~~~~~~~~~~~~~~~

   o bugfix: CC values were influenced when they were displayed on the edit page

   o Hawkeye fixed the BPM/STEP digits output and added a "TPD" (track position
     display) option for those who like to add more blink to their MIDIbox!


MIDIboxSEQ V4.051
~~~~~~~~~~~~~~~~~

   o improved live-recording of CCs

   o warning is print on screen if poly recording selected on a track with
     only one (or none) note layer

   o Drum live/step recording: disabled mapping of drum instruments
     to keys C/C#/D/D#/... - it was too confusing.

   o BPM LED Digit function: added optional 4th digit to display the value after the dot

   o added optional LED digits to display the played step.
     Anodes require a dedicated Shift Register, the 3 cathode lines can be shared with
     the shift register which is used to drive the cathodes of the BPM LED Digits.

   o added optional BPM (Tempo) encoder.
     As usual the pinning can be configured in the MBSEQ_HW.V4 file


MIDIboxSEQ V4.050
~~~~~~~~~~~~~~~~~

   o added LED functions for received MIDI IN/OUT events to MBSEQ_HW.V4

   o added BPM LED Digit function to MBSEQ_HW.V4
     A schematic can be found under http://www.ucapps.de/midibox_seq/mbseq_v4_bpm_digits.pdf

   o SR1 working again (programming error during MBSEQV4L merge)


MIDIboxSEQ V4.049
~~~~~~~~~~~~~~~~~

   o support for MIDI OUT4 and MIDI IN4